--- a/Fullstack Developer Curriculum - On going/02. CSS Basics/08 - Colored Markers/index.html
+++ b/Fullstack Developer Curriculum - On going/02. CSS Basics/08 - Colored Markers/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
+    
+  <div class="snowflake" style="--size: 5px; --snowflake-initial-x: 25vw; --snowflake-drift-x: 2vw; --duration: 15s; --delay: 0s; --snowflake-max-opacity: 0.7;"></div>
+  <div class="snowflake" style="--size: 10px; --snowflake-initial-x: 40vw; --snowflake-drift-x: 1vw; --duration: 10s; --delay: -7s; --snowflake-max-opacity: 1;"></div>
+  <div class="snowflake" style="--size: 6px; --snowflake-initial-x: 55vw; --snowflake-drift-x: -2vw; --duration: 13s; --delay: -4s; --snowflake-max-opacity: 0.8;"></div>
+  <div class="snowflake" style="--size: 7px; --snowflake-initial-x: 70vw; --snowflake-drift-x: 3vw; --duration: 11s; --delay: -1s; --snowflake-max-opacity: 0.9;"></div>
+  <div class="snowflake" style="--size: 4px; --snowflake-initial-x: 85vw; --snowflake-drift-x: -1vw; --duration: 16s; --delay: -9s; --snowflake-max-opacity: 0.6;"></div>
+    
     <h1>CSS Color Markers</h1>
+    <div class="container">
+        <div class="red marker">
+            <div class="cap"></div>
+            <div class="sleeve"></div>                   
+        </div>
+        <div class="green marker">
+            <div class="cap"></div>
+            <div class="sleeve"></div>                   
+        </div>
+        <div class="blue marker">
+            <div class="cap"></div>
+            <div class="sleeve"></div>                   
+        </div>
+    </div>
+      <div class="snowflake" style="--size: 8px; --snowflake-initial-x: 10vw; --snowflake-drift-x: -3vw; --duration: 12s; --delay: -2s; --snowflake-max-opacity: 0.9;"></div>
   </body>
 </html>
+
+
